--- a/estilo.css
+++ b/estilo.css
@@ -1,15 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 body{
     padding: 0;
     margin: 0;
-    background-color: rgba(83, 20, 230, 0.911);
+    background-color: #5314e6e8;
 }
 
 section#apresentacao{
     padding: 15px;
 }
+
+footer#rodape{
+    background-image: linear-gradient(to bottom, #5314e6e8, #170547e8);
+	color: rgb(0, 0, 0);
+    height: 100px;
+    padding-top: 50px;
+}
+
+footer#rodape p{
+    color: #ffff;
+	text-align: center;
+	font-family: 'Indie Flower', cursive;
+}
+
 
 
 div#principal{
@@ -112,6 +127,7 @@ div#sobre-mim{
     margin-right: 10%;
     font-family: 'Anton', sans-serif;
     font-family: 'Indie Flower', cursive;
+    font-size: 19px;
 }
 
 /*Formatação do Menu*/
@@ -192,3 +208,4 @@ header{
     font-family: 'Amatic SC', cursive;
     text-shadow: 0px 20px 3px #ffff;
 }
+
