--- a/estilo.css
+++ b/estilo.css
@@ -8,6 +8,11 @@ body{
     background-color: #5314e6e8;
 }
 
+html{
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 section#apresentacao{
     padding: 15px;
 }
