--- a/estilo.css
+++ b/estilo.css
@@ -6,12 +6,27 @@ body{
     padding: 0;
     margin: 0;
     background-color: #5314e6e8;
+    ;
 }
 
 html{
     overflow-x: hidden;
-    scroll-behavior: smooth;
+    scroll-behavior: smooth
 }
+
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    background: #00cc99;
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb{
+    background: #6600ff;
+    border-radius: 50px;
+}
+
 
 section#apresentacao{
     padding: 15px;
