--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Caveat&family=Pacifico&display=swap');
+
 body{
     padding: 0;
     margin: 0;
@@ -133,8 +135,8 @@ div#sobre-mim{
     width: 100%;
     margin-bottom: 2%;
     color: white;
-    display: inline-block 
-
+    display: inline-block;
+    box-shadow: 0px 0px 15px rgb(163, 163, 163);    
 }
 
 #sobre-mim{
@@ -154,9 +156,37 @@ div#sobre-mim{
 
 /*Projetos*/
 
-#projetos{
+#projetos h1{
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
+    font-size: 20px;
+    text-align: center;
+    text-shadow: 2px 5px 3px rgb(67, 67, 69);
+}
+
+#projeto-1 h3{
+    font-size: 15px;
+    color: #fff;
+    font-family: 'Anton', sans-serif;
+    font-family: 'Caveat', cursive;
+    font-family: 'Pacifico', cursive;
+    text-align: center;
+}
+
+#projeto-1{
+    background-color: #242323;
+    width: 300px;
+    height: 125px;
+    padding: 10px;
+    padding-left: 15px;
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 10%;
+
+}
+
+div#projetos{
+    
 }
 
 /*Formatação do Menu*/
