--- a/estilo.css
+++ b/estilo.css
@@ -129,9 +129,9 @@ div#sobre-mim h1{
 }
 div#sobre-mim{
     margin-left: -20px;
-    background-color: #3a3341;
+    background-color: #2b2b2b;
     padding: 50px 20px;
-    padding-bottom: 0;
+    padding-bottom: 2px;
     margin-top: 9.5%;
     width: 100%;
     margin-bottom: 2%;
@@ -163,6 +163,7 @@ div#sobre-mim{
     font-size: 20px;
     text-align: center;
     text-shadow: 2px 5px 3px rgba(15, 12, 238, 0.867);
+    margin-bottom: 5%;
 }
 
 #projeto-1 h3{
@@ -174,7 +175,7 @@ div#sobre-mim{
     text-align: center;
 }
 
-#projeto-1{
+div#projeto-1{
     background-color: #242323;
     width: 300px;
     height: 125px;
@@ -183,6 +184,7 @@ div#sobre-mim{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 10%;
     text-align: center;
+    margin-left: 15px;
 
 }
 #projeto-2{
