--- a/estilo.css
+++ b/estilo.css
@@ -13,42 +13,35 @@ body{
 
 html{
     overflow-x: hidden;
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
 }
+
+
+/*Formatação do scroll*/
+
 
 ::-webkit-scrollbar{
     width: 10px;
 }
 ::-webkit-scrollbar-track{
-    background: #5f00cc;
-    border-radius: 50px;
-}
-
-::-webkit-scrollbar-thumb{
     background: #000000;
     border-radius: 50px;
 }
 
+::-webkit-scrollbar-thumb{
+    background: #4b4453;
+    border-radius: 50px;
+}
+
+
+/*Sessão principal*/
 
 section#apresentacao{
     padding: 15px;
 }
 
-footer#rodape{
-    background-image: linear-gradient(45deg, #5314e646, #17054794);
-	color: rgb(0, 0, 0);
-    height: 100px;
-    padding-top: 50px;
-    display: none;
-}
 
-footer#rodape p{
-    color: #ffff;
-	text-align: center;
-	font-family: 'Indie Flower', cursive;
-}
-
-
+/*Div principal da apresentação*/
 
 div#principal{
     position: relative;
@@ -77,7 +70,10 @@ div#principal h3{
     margin-left: 12px;
 }
 
+
+
 /*EFEITO DE DIGITAÇÃO ABERTURA*/
+
 div#principal p{
     color: rgb(255, 255, 255); 
     text-shadow: 0px 0px 6px rgb(255, 255, 255);
@@ -114,7 +110,10 @@ div#principal p:nth-child(2){
     background: black;
   }
 
+
+
 /*SOBRE MIM*/
+
 
 div#sobre-mim{
     color: #ffffff;
@@ -155,7 +154,9 @@ div#sobre-mim{
     font-size: 19px;
 }
 
-/*Projetos*/
+
+
+/*Formatação da area Projetos*/
 
 #projetos h1{
     font-family: Arial, Helvetica, sans-serif;
@@ -205,7 +206,6 @@ div#projeto-2{
 
 
 
-
 #projeto-2 h3{
     text-align: center;
     font-family: 'Anton', sans-serif;
@@ -240,6 +240,8 @@ div#projetos{
 
 }
 
+
+
 /*Formatação do Menu*/
 
 .container{
@@ -257,11 +259,6 @@ header{
     color: #ffff;
 }
 
-.logo,.social{
-    width: 25%;
-    cursor: pointer;
-}
-
 .menu{
     width: 50%;
 }
@@ -273,7 +270,11 @@ header{
     font-size: 18px;
     position: relative;
     right: 20px ;
+
 }
+
+
+/*Efeito linha colorida sublinhando*/
 
 .menu nav a::after{
     content:" ";
@@ -290,6 +291,10 @@ header{
     width: 30px;
 }
 
+
+
+/*Formatação dos botões de rede socia*/
+
 .social button{
     width: 40px;
     height: 40px;
@@ -303,6 +308,15 @@ header{
 .social button i {
     font-size: 20px;
     color: #ffff;
+}
+
+
+
+/*Formatação do logo*/
+
+.logo,.social{
+    width: 25%;
+    cursor: pointer;
 }
 
 .logo p{
@@ -320,3 +334,18 @@ header{
     text-shadow: 0px 20px 3px #ffff;
 }
 
+/*Formatação do rodapé*/
+
+footer#rodape{
+    
+	color: rgb(0, 0, 0);
+    height: 100px;
+    padding-top: 50px;
+    display: none;
+}
+
+footer#rodape p{
+    color: #ffff;
+	text-align: center;
+	font-family: 'Indie Flower', cursive;
+}
