--- a/style.css
+++ b/style.css
@@ -17,6 +17,82 @@ html{
     scroll-behavior: smooth;
 }
 
+/*MENU NOVO RESPONSIVO*/
+
+.nav-button{
+    border: 0;
+    border-radius: 4px;
+    padding: 8px;
+    background-color:rgba(105, 101, 101, 0.867);
+    margin: 8px;
+    cursor: pointer;
+
+}
+
+.nav-button i{
+    color: #ffff;
+}
+
+
+.overlay{
+    width: 0; /*PARA O MENU COMEÇAR FECHADO*/
+    height:100%;
+    background-color: rgba(0,0,0,0.9) ;
+    z-index: 9 ; /*PARA FICAR POR CIMA DO CONTEUDO DO SITE*/
+    position:fixed;
+    left:0;
+    top:0;
+    overflow-x: hidden;
+    transition:all 0.5s;
+}
+
+/*ARRUMANDO POSICIONAMENTODOS ITENS DENTRO DO MENU*/
+
+.overlay-content{
+
+    position:relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px ;
+}
+
+.overlay a{
+    padding: 8px;
+    text-decoration: none;
+    color:#818181;
+    display: block; /*PARA OS ITENS FICAREM UM EMBAIXO DO OUTRO*/
+    font-size:34px;
+    transition: 0.5s;
+}
+
+.overlay a:hover , .overlay a:focus{
+    color: #f1f1f1;
+}
+
+.overlay .closebtn{
+    position:absolute;
+    top:25px;
+    right:45px;
+    font-size:60px;
+
+}
+
+/*RESPONSIVIDADE*/
+
+@media screen and (max-width: 450px){
+    .overlay a {
+        font-size:20px;
+    }
+    .overlay , .closebtn{
+        font-size:40px;
+        top:15px;
+        right:35px;
+    }
+}
+
+
+
 
 /*Formatação do scroll*/
 
@@ -126,7 +202,9 @@ div#sobre-mim h1{
     text-align: center;
     font-family: 'Amatic SC', cursive;
     font-family: 'Bangers', cursive;
+    
 }
+
 div#sobre-mim{
     margin-left: -20px;
     background-color: #2b2b2b;
@@ -137,7 +215,8 @@ div#sobre-mim{
     margin-bottom: 2%;
     color: white;
     display: inline-block;
-    box-shadow: 0px 0px 15px rgb(163, 163, 163);    
+    box-shadow: 0px 0px 15px rgb(22, 22, 22);    
+    padding-bottom: 25px;
 }
 
 #sobre-mim{
@@ -153,6 +232,7 @@ div#sobre-mim{
     margin-right: 10%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 19px;
+    text-align: center;
 }
 
 
@@ -162,8 +242,9 @@ div#sobre-mim{
 #projetos h1{
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
-    font-size: 20px;
-    text-align: center;
+    font-size: 30px;
+    position: relative;
+    left:400px;
     text-shadow: 2px 5px 3px rgba(15, 12, 238, 0.867);
     margin-bottom: 5%;
 }
@@ -186,7 +267,8 @@ div#projeto-1{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 10%;
     text-align: center;
-    margin-left: 15px;
+    left: 300px;
+    position: relative;
 
 }
 #projeto-2{
@@ -197,11 +279,12 @@ div#projeto-1{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 10%;
     text-align: center;
+    
 }
 
 div#projeto-2{
     position: relative;
-    left: 280px;
+    left: 300px;
     margin-top: 10px;
 }
 
@@ -231,7 +314,7 @@ div#projeto-2{
 
 #projeto-3{
     position: relative;
-    left: 540px;
+    left: 300px;
     margin-top: 10px;
 }
 
@@ -241,56 +324,6 @@ div#projetos{
 
 }
 
-
-
-/*Formatação do Menu*/
-
-.container{
-    max-width: 1080px;
-    display: flex;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Roboto Mono', monospace;
-}
-
-header{
-    background-color: #000000;
-    width: 100%;
-    color: #ffff;
-}
-
-.menu{
-    width: 50%;
-}
-
-.menu nav a{
-    text-decoration: none;
-    color: #ffffff;
-    padding-right: 50px;
-    font-size: 18px;
-    position: relative;
-    right: 20px ;
-
-}
-
-
-/*Efeito linha colorida sublinhando*/
-
-.menu nav a::after{
-    content:" ";
-    width: 0px;
-    height: 4px;
-    background-image: linear-gradient(45deg, rgba(102, 43, 241, 0.911), rgb(233, 24, 24) );
-    position: absolute;
-    top: 25px;
-    left: 0;
-    transition: width 1s;
-}
-
-.menu nav a:hover::after{
-    width: 30px;
-}
 
 
 
@@ -304,49 +337,44 @@ header{
     margin-right: 10px;
     border-radius: 8px;
     cursor: pointer;
+    margin-bottom: 0%;
+    
+    
 }
 
 .social button i {
     font-size: 20px;
     color: #ffff;
+    
+}
+
+.social a{
+    position: relative;
+    left: 180%;
 }
 
 
-
-/*Formatação do logo*/
-
-.logo,.social{
+.social{
     width: 25%;
     cursor: pointer;
-}
-
-.logo p{
-    display: flex;
-    position: absolute;
-    top: 45px;
-    left: 100px;
-}
-
-.logo h1{
-    display: flex;
-    position: relative;
-    top: -10px;
-    font-family: 'Amatic SC', cursive;
-    text-shadow: 0px 20px 3px #ffff;
+    
 }
 
 /*Formatação do rodapé*/
 
-footer#rodape{
-    
-	color: rgb(0, 0, 0);
-    height: 100px;
-    padding-top: 50px;
-    display: none;
+footer#rodape p{
+    border-top: 1px solid rgb(3, 3, 3);
+    height: 20px;
+    padding-top: 65px;
+    display: block;
 }
 
 footer#rodape p{
     color: #ffff;
 	text-align: center;
 	font-family: 'Indie Flower', cursive;
+}
+
+footer#rodape button{
+    margin-bottom: 20px;
 }
