--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     padding: 0;
     margin: 0;
     background-color: #000000e8;
-    background-image: linear-gradient(to right, rgb(64, 40, 104), rgb(49, 52, 85));
+    background-image: linear-gradient(to right, rgb(15, 10, 24), rgb(7, 19, 151),rgb(5, 12, 85));
 }
 
 
@@ -117,13 +117,21 @@ section#apresentacao{
     padding: 15px;
 }
 
+#img{
+    width: 280px;
+    position: relative;
+    left: 450px;
+    margin-right: 25px;
+    top: -140px;
+    border-radius: 45%;
+}
 
 /*Div principal da apresentação*/
 
 div#principal{
     position: relative;
-    margin-bottom: 200px;
-    margin-left: 250px;
+    margin-bottom: 100px;
+    margin-left: 50px;
     margin-right: 835px;
     width: 500px;
     top: 90px;
@@ -191,19 +199,6 @@ div#principal p:nth-child(2){
 
 /*SOBRE MIM*/
 
-#img{
-    width: 280px;
-    position: relative;
-    float: right;
-    margin-right: 25px;
-    margin-top: 69px;
-    border-radius: 45%;
-}
-
-#musica{
-    margin-top: 25px;
-   
-}
 
 div#sobre-mim{
     color: #ffffff;
@@ -223,7 +218,7 @@ div#sobre-mim{
     background-color: #2b2b2b;
     padding: 50px 20px;
     padding-bottom: 2px;
-    margin-top: 9.5%;
+
     width: 100%;
     margin-bottom: 2%;
     color: white;
@@ -238,7 +233,7 @@ div#sobre-mim{
     text-justify: center;
     float: left;
     margin-top: 0%;
-    margin-left: 10%;
+    margin-left: 15%;
     margin-right: 30px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 19px;
@@ -278,10 +273,16 @@ div#projeto-1{
     border-radius: 10%;
     text-align: center;
     left: 300px;
+    padding-bottom: 20px;
     position: relative;
     box-shadow: 0px 0px 10px white;
 
 }
+
+#projeto-1 p:hover{
+    padding-left: -100px;
+}
+
 #projeto-2{
     background-color: #242323;
     width: 300px;
@@ -344,7 +345,8 @@ div#projetos{
     position: relative; /*Posição relativa dentro da div*/
     margin: 10px auto -11px auto;
     padding: 10px;
-    background-color: #2b1a50;
+    background-color: #24242513;
+    box-shadow: 0px 0px 10px black;
     border-radius: 0.25%;
 }
 
